starting to develop the get result

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -74,6 +74,7 @@
                 <div class="form-group">
                     <textarea class="form-control" rows="5" id="query"></textarea>
                     <button onclick="registerQuery()" class="btn btn-default" type="button">Register Query</button>
+                    <button onclick="getResults()" class="btn btn-default" type="button">Get Result</button>
                 </div>
             </div>
         </div>
