--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -49,7 +49,7 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-md-5" id="tw-stream">
+            <div class="col-md-10" id="tw-stream">
                 <h3> TripleWave Stream</h3>
                 <textarea id="stream">
                 </textarea>
@@ -61,21 +61,36 @@
                     </span>
                 </div>
             </div>
-            <div class="col-md-5" id="tw-response">
-                <h3> RSP Response</h3>
-                <textarea id="response">
-                </textarea>
-            </div> 
         </div>
-
-        <div class="row">
-            <div class="col-md-10 query-container" >
+		
+		<div class="row">
+			<div class="col-md-10" id="responseContainer">
+			</div>
+		</div>
+		
+        <div class="row"> 
+            <div class="col-md-10" >
                 <h3> Write your query</h3>
-                <div class="form-group">
-                    <textarea class="form-control" rows="5" id="query"></textarea>
-                    <button onclick="registerQuery()" class="btn btn-default" type="button">Register Query</button>
-                    <button onclick="getResults()" class="btn btn-default" type="button">Get Result</button>
+                <div class="row">
+                	<div class="col-md-9">
+	                    <textarea class="form-control" rows="5" id="query"></textarea>   
+	                    <h5>Query Name</h5>         		
+                    	 <div class="input-group">
+                  			<input id="queryName" type="text" class="form-control" placeholder="Query Name">
+                    		<span class="input-group-btn">
+                       			 <button id="startStream" onclick="registerQuery()" class="btn btn-default" type="button">Register</button>
+                    		</span>
+                		</div>
+                	</div>
+                	<div class="col-md-3">
+		                <div class="btn-group-vertical" role="group" aria-label="...">
+		                    <button onclick="load('topUserWiki')" class="btn btn-default" type="button">Load Top User Query</button>
+		                    <button onclick="load('topPageWiki')" class="btn btn-default" type="button">Load Top Page Query</button>
+		                    <button onclick="clearFields()" class="btn btn-default" type="button">Clear</button>
+		                </div>             	
+                	</div>
                 </div>
+                
             </div>
         </div>
     </div>
