--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -86,8 +86,10 @@
                 	</div>
                 	<div class="col-md-3">
 		                <div class="btn-group-vertical" role="group" aria-label="...">
-		                    <button onclick="load('topUserWiki')" class="btn btn-default" type="button">Load Top User Query</button>
-		                    <button onclick="load('topPageWiki')" class="btn btn-default" type="button">Load Top Page Query</button>
+		                    <button onclick="load('query1')" class="btn btn-default" type="button">Load Query1</button>
+		                    <button onclick="load('query2')" class="btn btn-default" type="button">Load Query2</button>
+		                    <button onclick="load('query3')" class="btn btn-default" type="button">Load Query3</button>
+		                    <button onclick="load('query4')" class="btn btn-default" type="button">Load Query4</button>
 		                    <button onclick="clearFields()" class="btn btn-default" type="button">Clear</button>
 		                </div>             	
                 	</div>
