added correct ws url

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -57,7 +57,7 @@
                 </textarea>
                 <h5> TripleWave Websocket Address</h5>
                 <div class="input-group">
-                    <input id="twUrl" type="text" class="form-control" placeholder="TripleWave URL." value="ws://131.175.141.249/TripleWave-transform/ws/stream">
+                    <input id="twUrl" type="text" class="form-control" placeholder="TripleWave URL." value="ws://192.168.1.199:4040/primus">
                     <span class="input-group-btn">
                         <button id="startStream" onclick="initStream()" class="btn btn-default" type="button">Start Stream</button>
                     </span>
